[tool.poetry]
name = "columbus"
version = "0.1.2"
description = ""
authors = ["alwalk0 <walkernotwalker@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"
starlette = "^0.24.0"
uvicorn = "^0.20.0"
pyaml = "^21.10.1"
databases = "^0.7.0"
psycopg2 = "^2.9.5"
alembic = "^1.9.3"
python-dotenv = "^0.21.1"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
startup_script = "columbus.startup_script:app"
run_app = "columbus.run:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

